--- a/bataille/bataille.html
+++ b/bataille/bataille.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Bataille Navale</h1>
+<div class="contener">
   <div id="grid"></div>
   <div id="results">
     <h2>Résultats</h2>
@@ -28,5 +29,6 @@
       <tbody id="score-table"></tbody>
     </table>
   </div>
+</div>
 </body>
 </html>
