--- a/bataille/bataille.html
+++ b/bataille/bataille.html
@@ -26,6 +26,8 @@
     </div>
   </div>
 
+  <div id="current-player">Au tour de : Joueur1</div>
+
   <!-- results -->
   <div id="results">
     <h2>Résultats</h2>
@@ -35,13 +37,13 @@
   </div>
 
   <!-- scoreboard -->
-  <h2>Tableau des scores</h2>
+  <h2>scoreboard</h2>
   <div id="scoreboard">
     <table>
       <thead>
         <tr>
-          <th>Joueur</th>
-          <th>Victoires</th>
+          <th>Player</th>
+          <th>victories</th>
         </tr>
       </thead>
       <tbody id="score-table"></tbody>
