--- a/bataille/bataille.html
+++ b/bataille/bataille.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bataille Navale</title>
+  <link rel="icon" href="./icon.png" type="image/png">
   <link rel="stylesheet" href="bataille.css">
   <script src="bataille.js" defer></script>
 </head>
